--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .card {
-    background-color: #c75b17;
+    background-color: #e28d57;
     border-radius: 20px;
     padding: 40px 32px;
     width: 320px;
