--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-    background-color: #ffffff;
+    background-color: #7f889f;
     display: flex;
     justify-content: center;
     align-items: center;
